# IndoorGML2LCC

./: CMakeLists.txt  IndoorGML2LCC.cpp  IndoorGML2LCC.h  IndoorGML2LCC_Ops.h  IndoorGML_reader.h  IndoorGML_writer.h  LCC_SpecialOps.h  README.md
data/: KU-EngBuilding-IndoorGML-2019-02-12.gml
